2002-12-21  Marcus Lundblad <ml@update.uu.se>
	
	* fvwm/style.c (style_parse_one_style_option):
	* fvwm/style.h:
	* fvwm/fvwm.h:
	* fvwm/window_flags:
	* fvwm/decorations.c (is_function_allowed, 
	                      __is_resize_allowed):
	Added styles Closable, Iconifiable, Maximizable and
	AllowMaximizeFixedSize
	* fvwm/conditional.c (MatchesConditionMask,
	                      CreateConditionMask):
	Added conditionals Closable,Iconifiable and Maximizable
	* fvwm/fvwm.1.in:
	Documented styles Closable, Iconifiable, Maximizable and
	AllowMaximizeFixedSize and conditionals 
	Closable,Iconifiable and Maximizable

2002-12-20  olicha  <olivier.chapuis@free.fr>

	* fvwm/window_flags.h:
	* fvwm/update.h:
	* fvwm/update.c (apply_window_updates):
	* fvwm/style.h:
	* fvwm/style.c (style_parse_one_style_option):
	* fvwm/fvwm.h:
	UseTitleDecorRotation style preparation

	* fvwm/fvwm.c (main):
	Use best TrueColor visual

	* fvwm/borders.c (border_get_border_gcs):
	Create the transparent_gc with the Scr.NoFocusWin and not the FW_W_FRAME
	window which may have a depth != Pdepth

	* fvwm/menus.c (paint_side_pic):
	* fvwm/menuitem.c (menuitem_paint):
	* fvwm/icons.c (DrawIconPixmapWindow):
	* fvwm/colorset.c (parse_colorset):
	* fvwm/ewmh_icons.c (EWMH_SetIconFromWMIcon):
	Used Scr.AlphaGC

2002-12-19  olicha  <olivier.chapuis@free.fr>

	* libs/Graphics.c (CreateRotatedPixmap):
	* libs/fvwmlib.h:
	New interface function CreateRotatedPixmap

	* libs/PictureImageLoader.c (PImageCreatePixmapFromArgbData):
	(PImageLoadXpm):
	* libs/PictureGraphics.c (PCreateRenderPixmap):
	(PCreateDitherPixmap):
	* libs/Graphics.c (CreateGradientPixmap):
	(CreateRotatedPixmap):
	* acconfig.h:
	* configure.in:
	* libs/FShm.h (new file):
	* libs/FImage.h (new file):
	* libs/FImage.c (new file):
	* libs/Makefile.am:
	* fvwm/fvwm.c (setVersionInfo): 
	Added MIT Shared Memory Extension for XImage
	
	* NEWS:
	Some news

	* fvwm/screen.h:
	* fvwm/builtins.c (ReadDecorFace):
	(FreeDecorFace):