@@ -1,3 +1,7 @@
+2002-12-22  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/fvwm.1.in: Grammar: allows to -> allows for.
+
 2002-12-21  Marcus Lundblad <ml@update.uu.se>
 	
 	* fvwm/style.c (style_parse_one_style_option):
